// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a ShelfSimulation component When it is rendered And there are less rows than columns Then should match the snapshot 1`] = `
<View
  style={
    Object {
      "height": 450,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#958472",
        "borderColor": "#2F2406",
        "borderRadius": 15,
        "borderTopWidth": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#958472",
            "borderWidth": 6,
            "elevation": 10,
          },
          Object {
            "height": 200,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {
              "height": "50%",
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "100%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-0-0"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              2
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {
              "height": "50%",
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "25%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-1-0"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              0
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "25%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-1-1"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              0
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "25%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-1-2"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              0
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "25%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-1-3"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              0
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Given a ShelfSimulation component When it is rendered And there are more rows or equal than columns Then should match the snapshot 1`] = `
<View
  style={
    Object {
      "height": 450,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#958472",
        "borderColor": "#2F2406",
        "borderRadius": 15,
        "borderTopWidth": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#958472",
            "borderWidth": 6,
            "elevation": 10,
          },
          Object {
            "height": 400,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {
              "height": "50%",
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-0-0"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              2
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-0-1"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              0
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {
              "height": "50%",
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-1-0"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              0
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#958472",
                "height": "100%",
                "justifyContent": "center",
              },
              Object {
                "width": "50%",
              },
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#4D3C2A",
                "borderBottomWidth": 5,
                "borderColor": "#2F2406",
                "borderRightWidth": 5,
                "height": "90%",
                "justifyContent": "center",
                "opacity": 1,
                "width": "90%",
              }
            }
            testID="shelf-1-1"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              0
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              books
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
